@@ -1,3 +1,6 @@
+2007-04-08  Marzo Sette Torres Junior <marzojr@yahoo.com>
+	Fixed screwed-up palettes in SI mods with custom mainshp.flx files.
+
 2007-04-06  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Improved large-avatar handling, fixing a few bugs it introduced for
 	  normal-sized avatars.
